# rinha-de-backend

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-127774c986c93dadc64931014e924eb6c0074ad1670241852a1a5031edf4cafa.json  query-59581fb17e966c6b817cbe090a3b77e3a84dbf961a4436c51afc1c5b2eb0582d.json  query-59fc548d54e8a22f59e326ef3bfe9c9fd1df38372a132543369788d48ccda306.json  query-98f4bbc56dc0dc0e0a08383f6dcf6e3c1236257eaf8c4fafd2f83323d66cff98.json
migrations/: 20230808034136_create_persons_table.sql
src/: config.rs  error.rs  lib.rs  main.rs  server.rs  tracing.rs  utils.rs
src/controllers/: count_persons.rs  create_person.rs  get_person.rs  mod.rs  search_persons.rs
