[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
http = "0.2.9"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.12.0"
reqwest = "0.11.18"
serde = "1.0.183"
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "chrono"] }
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.6", features = ["opentelemetry_0_18"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
